--- a/bookster/src/main/resources/application-dev.yml
+++ b/bookster/src/main/resources/application-dev.yml
@@ -15,10 +15,10 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   mail:
-    host: smtp.gmail.com
+    host: ${EMAIL_HOSTNAME}
     port: 465
-    username: root
-    password: root
+    username: ${EMAIL_USER_NAME}
+    password: ${EMAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -38,6 +38,11 @@ application:
   mailing:
     frontend:
       activation-url: http://localhost:4200/activate-account
+  cors:
+    origins: http://localhost:4200,http://localhost:8080,http://192.168.0.227:8088,http://192.168.0.227:8080
   file:
     uploads:
       photos-output-path: ./uploads
+
+server:
+  port: 8088
