--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -20,5 +20,8 @@ EXPOSE 8088
 ENV DB_URL=jdbc:postgresql://postgres-sql-bsn:5432/bookster
 ENV ACTIVE_PROFILE=${PROFILE}
 ENV JAR_VERSION=${APP_VERSION}
+ENV EMAIL_HOSTNAME=missing_host_name
+ENV EMAIL_USER_NAME=missing_user_name
+ENV EMAIL_USER_NAME=missing_password
 
 CMD java -jar -Dspring.profiles.active=${ACTIVE_PROFILE} -Dspring.datasource.url=${DB_URL} bookster-${JAR_VERSION}.jar
